cmake_minimum_required(VERSION 3.13)
project(Poo_Proiect_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Poo_Proiect_1
        .idea/.name
        .idea/encodings.xml
        .idea/misc.xml
        .idea/modules.xml
        ".idea/Poo Proiect 1.iml"
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Poo_Proiect_1.cbp
        CMakeLists.txt
        main.cpp cmake-build-debug/str.h str.h cmake-build-debug/str.cpp)
